fix: overlapped scrollbar between the body and component

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 20px;
   padding: 0;
-  font-family: sans-serif;
+  height: 100%; 
+  overflow: hidden;
 }
